[package]
name = "toydb"
description = "A distributed SQL database"
version = "0.1.0"
authors = ["Erik Grinaker <erik@grinaker.org>"]
edition = "2021"
default-run = "toydb"

[lib]
doctest = false

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
config = "0.14.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dyn-clone = "1.0.17"
fs4 = "0.8.2"
hdrhistogram = "7.5.4"
itertools = "0.13.0"
log = "0.4.21"
petname = "2.0.2"
rand = "0.8.5"
regex = "1.10.4"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
serde = "1.0.200"
serde_bytes = "0.11.14"
simplelog = "0.12.2"
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[dev-dependencies]
escargot = "0.5.10"
goldenscript = "0.7.0"
hex = "0.4.3"
paste = "1.0.14"
serde_json = "1.0.117"
tempfile = "3.10.1"
test-case = "3.3.1"
test_each_file = "0.3.2"
